--- a/kcrud-server/src/main/resources/openapi/documentation.yaml
+++ b/kcrud-server/src/main/resources/openapi/documentation.yaml
@@ -53,7 +53,7 @@ paths:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Invalid session context. Use either admin/admin or guest/guest."
+                  value: "Invalid CallContext. Use either admin/admin or guest/guest."
         "500":
           description: "Internal Server Error"
           content:
@@ -93,7 +93,7 @@ paths:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Invalid session context. Use either admin/admin or guest/guest."
+                  value: "Invalid CallContext. Use either admin/admin or guest/guest."
         "500":
           description: "Internal Server Error"
           content:
@@ -221,7 +221,7 @@ paths:
       tags:
         - "RBAC"
       description: "Opens the RBAC dashboard. Redirects to the login screen if the\
-        \ session context is invalid."
+        \ CallContext is invalid."
       parameters:
         - name: "role"
           in: "query"
@@ -295,7 +295,7 @@ paths:
       tags:
         - "RBAC"
       description: "Redirects actors to the dashboard if they have an existing session,\
-        \ <br> or to the login page if no valid session is found."
+        \ <br> or to the login page if no valid CallContext is found."
       responses:
         "302":
           description: "Found <br> Redirect"
