Updated dependencies. google-phonenumber:8.13.46.1, kotlinx-serialization:1.7.3

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,13 +9,13 @@ dokka = "1.9.20"                        # https://github.com/Kotlin/dokka/releas
 exposed = "0.54.0"                      # https://github.com/JetBrains/Exposed/releases
 exposed-pagination = "1.0.0"            # https://github.com/perracodex/exposed-pagination/releases
 flyway = "10.18.0"                      # https://github.com/flyway/flyway/releases
-google-phonenumber = "8.13.45"          # https://github.com/google/libphonenumber/releases
+google-phonenumber = "8.13.46"          # https://github.com/google/libphonenumber/releases
 hikariCP = "5.1.0"                      # https://github.com/brettwooldridge/HikariCP/tags
 koin = "4.0.0"                          # https://github.com/InsertKoinIO/koin/releases
 kotlin = "2.0.20"                       # https://github.com/JetBrains/kotlin/releases
 kotlinx-atomicfu = "0.25.0"             # https://github.com/Kotlin/kotlinx-atomicfu/releases
 kotlinx-datetime = "0.6.1"              # https://github.com/Kotlin/kotlinx-datetime/releases
-kotlinx-serialization = "1.7.2"         # https://github.com/Kotlin/kotlinx.serialization/releases/tag/v1.7.2
+kotlinx-serialization = "1.7.3"         # https://github.com/Kotlin/kotlinx.serialization/releases
 ktor = "2.3.12"                         # https://ktor.io/docs/releases.html#release-details
 logback = "1.5.8"                       # https://github.com/qos-ch/logback/tags
 micrometer-prometheus = "1.13.4"        # https://github.com/micrometer-metrics/micrometer/releases
