Changed ConfigurationParser to handle single string arrays with a single-quoted + comma-delimited format

--- a/kcrud-core/src/main/resources/config/config_cors.conf
+++ b/kcrud-core/src/main/resources/config/config_cors.conf
@@ -1,15 +1,15 @@
 # Copyright (c) 2024-Present Perracodex. Use of this source code is governed by an MIT license.
 
 cors {
-	# Hosts should be in the format:
-	# 	"host|comma-delimited-schemes|optional comma-delimited-subdomains".
+	# Hosts should be in the format, using colon as section separator, and comma as value separator:
+	# 	"host;comma-delimited-schemes;optional comma-delimited-subdomains".
 	#
 	# When using a single string to contain all the details instead of an array,
-	# use a semilocon ';' to separate the hosts.
+	# items should be single quoted and separated by commas.
 	#
-	# Example:
-	# 	List example: ["kcrud.com|http,https|api,admin", "potato.com|https|api", "somewhere.com|https|"]
-	#	Single string example: "kcrud.com|http,https|api,admin;potato.com|https|api;somewhere.com|https|"
+	# Examples:
+	# 	List: ["kcrud.com;http,https;api,admin", "potato.com;https;api", "somewhere.com;https;"]
+	#	Single string: "'kcrud.com;http,https;api,admin','potato.com;https;api','somewhere.com;https;'"
 	#
 	# If empty list or any of the hosts is '*', then the default is to allow all hosts,
 	# in which case schemes and subdomains are ignored even if defined, in addition of any other host.
